<resources>
    <string name="app_name">Absensi-App</string>

    <!--  Menu of Bottom Navigation  -->
    <string name="title_home">Beranda</string>
    <string name="title_task">Tugas</string>
    <string name="title_attendance">Absen</string>
    <string name="title_profile">Profil</string>

    <!--  Title of Activity  -->
    <string name="title_login">Masuk</string>
    <string name="title_registration">Registrasi</string>
    <string name="title_greeting_name">Halo, %s</string>
    <string name="title_today_task">Tugas hari ini</string>
    <string name="title_attendance_detail">Detail Absen Hari Ini</string>
    <string name="title_list_task">Daftar Tugas</string>
    <string name="title_logout">Keluar</string>

    <!--  Title of content  -->
    <string name="nums">0</string>
    <string name="attendance">Absen</string>
    <string name="date_today">12-Jan-12</string>
    <string name="time">00:00:00</string>
    <string name="show_all">Lihat semua</string>
    <string name="nik">000000xxxxxx</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="save">Simpan</string>

    <!--  Title of field  -->
    <string name="email">Email</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="password">Password</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="title_nik">NIK</string>
    <string name="desc_task">Deskripsi task pertama</string>
    <string name="find_task_per_date">Cari tugas per tanggal</string>
    <string name="find_employe">Cari karyawan</string>
    <string name="icon_back">icon back</string>
    <string name="find_attendance_per_date">Cari absen per tanggal</string>
    <string name="input_desc_information">Masukkan Informasi</string>
    <string name="data_empty">Tidak ada data %s</string>
    <string name="loading">Loading&amp;#8230</string>
    <string name="latitude">Latitude : %s</string>
    <string name="longitude">Longitude : %s</string>
    <string name="latitude_placeholder">0.000000</string>
    <string name="longitude_placeholder">000.000000</string>
    <string name="sick_menu">Menu Sakit</string>
    <string name="send">Kirim</string>
    <string name="file_name">filename</string>
    <string name="title_scanner">Scanner</string>
    <string name="download_file"> <u>Lihat file tugas</u></string>
    <string name="main_menu">Menu Utama</string>
    <string name="ijin">Ijin</string>
    <string name="sick">Sakit</string>
    <string name="list_attendance">Daftar Absen</string>
    <string name="employee">Karyawan</string>
    <string name="icon_image_employee">icon image employee</string>
    <string name="icon_image_list_attendance">icon image list attendance</string>
    <string name="icon_image_sick">icon image sick</string>
    <string name="icon_image_ijin">icon image ijin</string>
    <string name="icon_image_attendance_in">icon image attendance in</string>
    <string name="icon_image_attendance_out">icon image attendance out</string>
    <string name="upload_file">Unggah Berkas</string>
    <string name="ijin_menu">Menu Ijin</string>
    <string name="information">Keterangan : %s</string>
    <string name="is_validation">validasi</string>
    <string name="validation">Sudah Divalidasi</string>
    <string name="not_validation">Belum Divalidasi</string>
    <string name="reminder_time_attendance">Waktunya Absen</string>
    <string name="reminder_active">Pengingat Absen Aktif</string>
    <string name="reminder_late_attendance_active">Pengingat Telat Absen Aktif</string>
    <string name="username">Username</string>
</resources>