<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="12dp"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/title_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_menu"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_menu"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/menu_ijin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ic_ijin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon_image_ijin"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_circle_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/ijin"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_sick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ic_sick"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon_image_sick"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_circle_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/sick"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_list_attendance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ic_list_attendance"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon_image_list_attendance"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_circle_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/list_attendance"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_employee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_ic_employee"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon_image_employee"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_circle_up" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/employee"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
