<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ui.task.TaskFragment">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <ImageButton
            android:id="@+id/profile_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_left"
            android:contentDescription="@string/icon_back" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorGreyLight"
            android:textSize="20sp"
            android:text="@string/title_list_task"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_page_white"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp">

        <!-- Filter Date -->
        <EditText
            android:id="@+id/search_date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_search_view"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/find_task_per_date"
            android:paddingHorizontal="12dp"
            android:maxLines="1"/>

        <!-- Filter Date -->
        <EditText
            android:id="@+id/search_employee"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_search_view"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/find_employe"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:visibility="gone"/>

        <!-- List Task Today -->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            tools:listitem="@layout/item_task"/>
    </LinearLayout>
</LinearLayout>