<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Title Attendance -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_attendance_detail"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Card View Attendance Detail -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorGreyLight"
        android:clipToPadding="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <!-- Date Today -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_today"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold" />

            <!-- Container Time Attendance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <!-- Attendance IN -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- ICON IN -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_arrow_circle_down"
                        android:contentDescription="@string/icon_image_attendance_in" />
                    <!-- TIME IN -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/time_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text="@string/time"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- Attendance OUT -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!-- ICON OUT -->
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_arrow_circle_up"
                        android:contentDescription="@string/icon_image_attendance_in" />

                    <!-- TIME OUT -->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/time_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text="@string/time"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>