<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.attendance.AttendanceFragment">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:contentDescription="@string/icon_back"
            android:src="@drawable/ic_left" />

        <!-- Title Page -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:text="@string/title_attendance"
            android:textColor="@color/colorGreyLight"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_page_white"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp">

        <!-- Filter Employee -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_employee"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/bg_search_view"
            android:visibility="visible"
            app:hintEnabled="false">

            <AutoCompleteTextView
                android:id="@+id/et_search_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="20dp"
                android:hint="@string/find_employe"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/colorTextSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- List Task Today -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:layout_below="@id/search_employee">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_attendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_below="@id/search_employee"
                tools:listitem="@layout/item_attendance" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <!-- Message Data Empty -->
        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/data_empty"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_employee"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>